# graphics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  mingw-toolchain.cmake
.VSCodeCounter/2026-06-12_20-22-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-12_20-22-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/shaders/: basic.frag  basic.vert  shadow.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert
src/: application.cpp  application.h  input.cpp  input.h  main.cpp  window.cpp  window.h
src/components/: camera.h  component.h  directionallight.h  light.h  meshrenderer.h  playercontroller.cpp  playercontroller.h  pointlight.h  rotationComponent.cpp  rotationComponent.h  rotationcomponent.cpp  rotationcomponent.h  skybox.h  spotlight.h  transform.cpp  transform.h  translatecomponent.cpp  translatecomponent.h
src/data/: scenedata.h  shadowpassdata.h
src/editor/: gameview.cpp  gameview.h  imguilayer.cpp  imguilayer.h  playmode.cpp  playmode.h  sceneeditor.cpp  sceneeditor.h
src/rendering/: bufferlayout.cpp  bufferlayout.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  indexbuffer.cpp  indexbuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadowmap.cpp  shadowmap.h  texture.cpp  texture.h  vertex.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
src/resources/: assetmanager.cpp  assetmanager.h  cubemaploader.cpp  cubemaploader.h  meshloader.cpp  meshloader.h  modelloader.cpp  modelloader.h  shaderloader.cpp  shaderloader.h  textureloader.cpp  textureloader.h
src/scenering/: gameobject.cpp  gameobject.h  iscenesetup.h  rendersettings.h  scene.cpp  scene.h  scenedata.h  scenemanager.cpp  scenemanager.h  skybox.h
src/scenes/: demoscene.cpp  demoscene.h
src/systems/: rendersystem.cpp  rendersystem.h
